fixed audio module color contrast

--- a/assets/scss/et-builder/divi-overwrites.scss
+++ b/assets/scss/et-builder/divi-overwrites.scss
@@ -134,3 +134,8 @@ $default-outline: solid 2px #007bff;
         }
     }
 }
+
+// divi audio
+.et-db #et-boc .et_pb_text_color_dark .mejs-container .mejs-controls .mejs-time span {
+    color: #000;
+}
